--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,47 @@
 /*stylesheet*/
+
+body.alternate {
+	color: plum;
+text-decoration-style: underline;
+font-weight: bold;
+font-family: sans-serif;
+}
+
+h1.hover {
+	text-decoration-style: none;
+}
+
+h1	{
+	font-size: 40px;
+}
+
+h1.alternate {
+color: ;
+text-decoration-style: underline;
+font-weight: bold;
+font-family: sans-serif;
+}
+	
+img.veggies {
+	width: 100%;
+	height: auto;
+}
+
+a {
+	font-size: 6px;
+	font-weight: 800;
+	color: plum;
+}
+
+p {
+	text-align: left;
+}
+.tiny {
+	font-size: .5em;
+}
+
+#site-title {
+	text-align: center;
+	margin-bottom: .5rem;
+	font-size: 60px;
+}
