--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 	font-weight: 400;
 	background-color: var(background-color);
 
+
 }
 
 h1, h2, h3, h4, h5, {
@@ -28,8 +29,12 @@ p {
 }
 
 .sides {
-	 padding-left: 50px;
+	padding-left: 50px;
   padding-right: 50px;
+}
+
+. {
+  text-align: center;
 }
 
 h1, h2 {
@@ -106,6 +111,7 @@ h1, h2 {
   display: flex;
   align-items: center;
   height: 70vh;
+
 }
 
 }
@@ -113,7 +119,7 @@ h1, h2 {
 #intro-header {
 	font-weight: 700;
 	font-size: 100px;
-  text-align: ;
+  text-align: center;
   }
 
 #work h3, #page h3 {
@@ -187,6 +193,10 @@ h1, h2 {
   text-align: right;
 }
 
+.align {
+  text-align: center;
+
+}
 .page-item .date {
   margin: 0;
   font-size: .85rem;
@@ -255,7 +265,7 @@ h1, h2 {
   }
 
   #intro-holder {
-    padding: 0.5em;
+    padding: .5rem;
 
   }
 
