--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,6 @@ p {
 	margin-bottom: 1rem;
 }
 
-
-
 .sides {
 	padding-left: 50px;
   padding-right: 50px;
@@ -173,8 +171,10 @@ h1, h2 {
 
 .page-item img {
   display: block;
-  width: 100%;
+  width: 2.5%;
   height: auto;
+  margin-left: auto; 
+  margin-right: auto;
 }
 
 .page-item .caption {
@@ -225,9 +225,9 @@ h1, h2 {
 /*FOOTER*/
 
 #footer {
-  padding: 2em;
+  padding: 4em;
   text-align: center;
-  font-size: .85rem;
+  font-size: .75rem;
 }
 
 #footer p:last-child {
