--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
 	background-color: var(background-color);
 }
 
+}
 h1, h2, h3, h4, h5, {
 	margin-top: 0;
 	margin-bottom: 1em;
@@ -82,7 +83,7 @@ h1, h2 {
 }
 
 #topnav li {
-  margin-right: 2em;
+  margin-right: auto;
   margin-bottom: 0;
 }
 
@@ -171,10 +172,21 @@ h1, h2 {
 
 .page-item img {
   display: block;
-  width: 2.5%;
   height: auto;
   margin-left: auto; 
   margin-right: auto;
+}
+
+.pic {
+  width: 2.5%;
+}
+
+.text1 {
+  color: blue;
+}
+
+.text2 {
+  color: red;
 }
 
 .page-item .caption {
