--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,41 @@ h1, h2 {
   height: auto;
 }
 
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.scrolling-wrapper .card {
+  display: inline-block;
+}
+
+.scrolling-wrapper-flexbox {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+.scrolling-wrapper-flexbox .card {
+  flex: 0 0 auto;
+  margin-right: 3px;
+}
+
+.card {
+  border: 2px solid #a6192d;
+  width: 80vw;
+  height: 80vh;
+}
+
+.scrolling-wrapper, .scrolling-wrapper-flexbox {
+  height: 80vh;
+  margin-bottom: 20px;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
+}
+.scrolling-wrapper::-webkit-scrollbar, .scrolling-wrapper-flexbox::-webkit-scrollbar {
+  display: none;
+}
+
 /* PAGE */
 
 #page {
