--- a/css/style.css
+++ b/css/style.css
@@ -180,12 +180,12 @@ h1, h2 {
 
 .card {
   border: 2px solid #a6192d;
-  width: 80vw;
-  height: 80vh;
+  width: 20vw;
+  height: 20vh;
 }
 
 .scrolling-wrapper, .scrolling-wrapper-flexbox {
-  height: 80vh;
+  height: 20vh;
   margin-bottom: 20px;
   width: 100%;
   -webkit-overflow-scrolling: touch;
@@ -224,6 +224,10 @@ h1, h2 {
   color: red;
 }
 
+.text {
+  text-align: center;
+  margin-top: 0;
+}
 .page-item .caption {
   font-size: .75rem;
   font-weight: bold;
